--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
+            <li><a href="#our-beginning" id="our-beginning-link">Our Beginning and start up</a></li>
             <li><a href="#features" id="features-link">Features</a></li>
             <li><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
           </ul>
