commit from the test branch

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           <ul>
             <li><a href="#our-beginning" id="our-beginning-link">Our Beginning and start up</a></li>
             <li><a href="#features" id="features-link">Features</a></li>
-            <li><a href="#testimonials" id="testimonials-link">Testimonials,hah,,</a></li>
+            <li><a href="#testimonials" id="testimonials-link">Testimonials.</a></li>
           </ul>
         </nav>
       </div>
