--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-        <div class="site-header__logo__graphic icon icon--clear-view-escapes">New Title: Learn and Learn!!!</div>
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Keep on pushing...</div>
       </div>
 
       <div class="site-header__menu-icon">
